implemented stage strategy in Player and PlayerController classes